--- a/618_Homework_01.ipynb
+++ b/618_Homework_01.ipynb
@@ -76,7 +76,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "MY_UNIQNAME = '' # please fill in your uniqname"
+    "MY_UNIQNAME = 'tengdann' # please fill in your uniqname"
    ]
   },
   {
@@ -106,25 +106,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "colab": {},
-    "colab_type": "code",
-    "id": "ttHwVC8ot5Ur"
-   },
-   "outputs": [],
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ID        271116\n",
+       "Name      271116\n",
+       "Sex       271116\n",
+       "Age       261642\n",
+       "Height    210945\n",
+       "Weight    208241\n",
+       "Team      271116\n",
+       "NOC       271116\n",
+       "Games     271116\n",
+       "Year      271116\n",
+       "Season    271116\n",
+       "City      271116\n",
+       "Sport     271116\n",
+       "Event     271116\n",
+       "Medal      39783\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# put your code here"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "colab_type": "text",
-    "id": "g1RAXO76uN-A"
-   },
-   "source": [
-    "(and explain your answers)"
+    "import pandas as pd\n",
+    "\n",
+    "athletes = pd.read_csv('data/hw1_data/athlete_events.csv', index_col = None)\n",
+    "regions = pd.read_csv('data/hw1_data/noc_regions.csv', index_col = None)\n",
+    "athletes.count()"
    ]
   },
   {
