--- a/618_Homework_01.ipynb
+++ b/618_Homework_01.ipynb
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -148,7 +148,7 @@
        "(230, 3)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -354,7 +354,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0xdd678dc048>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x3247bbd6d8>"
       ]
      },
      "execution_count": 9,
@@ -400,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -411,15 +411,15 @@
      "data": {
       "text/plain": [
        "Event\n",
-       "Football Men's Football                             41\n",
-       "Rowing Women's Coxed Eights                         45\n",
-       "Swimming Women's 4 x 100 metres Freestyle Relay     55\n",
-       "Hockey Men's Hockey                                127\n",
        "Hockey Women's Hockey                              128\n",
+       "Hockey Men's Hockey                                127\n",
+       "Swimming Women's 4 x 100 metres Freestyle Relay     55\n",
+       "Rowing Women's Coxed Eights                         45\n",
+       "Football Men's Football                             41\n",
        "Name: Medal, dtype: int64"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -427,7 +427,7 @@
    "source": [
     "netherlands = athletes[athletes.Team == 'Netherlands']\n",
     "ned_medals = netherlands[pd.notnull(netherlands.Medal)]\n",
-    "ned_medals.groupby('Event').Medal.count().sort_values().tail(5)"
+    "ned_medals.groupby('Event').Medal.count().sort_values(ascending = False).head(5)"
    ]
   },
   {
@@ -452,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 30,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -480,157 +480,231 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>NOC</th>\n",
        "      <th>count</th>\n",
        "      <th>unique</th>\n",
        "      <th>top</th>\n",
        "      <th>freq</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>NOC</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
+       "      <th>region</th>\n",
+       "      <th>notes</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>BLR</th>\n",
+       "      <th>11</th>\n",
+       "      <td>BDI</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>F</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Burundi</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>BLR</td>\n",
        "      <td>139</td>\n",
        "      <td>2</td>\n",
        "      <td>F</td>\n",
        "      <td>77</td>\n",
+       "      <td>Belarus</td>\n",
+       "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>BRN</th>\n",
+       "      <th>18</th>\n",
+       "      <td>BRN</td>\n",
        "      <td>3</td>\n",
        "      <td>1</td>\n",
        "      <td>F</td>\n",
        "      <td>3</td>\n",
+       "      <td>Bahrain</td>\n",
+       "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>CHN</th>\n",
+       "      <th>22</th>\n",
+       "      <td>CHN</td>\n",
        "      <td>989</td>\n",
        "      <td>2</td>\n",
        "      <td>F</td>\n",
        "      <td>654</td>\n",
+       "      <td>China</td>\n",
+       "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>CRC</th>\n",
+       "      <th>26</th>\n",
+       "      <td>CRC</td>\n",
        "      <td>4</td>\n",
        "      <td>1</td>\n",
        "      <td>F</td>\n",
        "      <td>4</td>\n",
+       "      <td>Costa Rica</td>\n",
+       "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>JAM</th>\n",
+       "      <th>56</th>\n",
+       "      <td>HKG</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2</td>\n",
+       "      <td>F</td>\n",
+       "      <td>2</td>\n",
+       "      <td>China</td>\n",
+       "      <td>Hong Kong</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>68</th>\n",
+       "      <td>JAM</td>\n",
        "      <td>157</td>\n",
        "      <td>2</td>\n",
        "      <td>F</td>\n",
        "      <td>86</td>\n",
+       "      <td>Jamaica</td>\n",
+       "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>KOS</th>\n",
+       "      <th>75</th>\n",
+       "      <td>KOS</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>F</td>\n",
        "      <td>1</td>\n",
+       "      <td>Kosovo</td>\n",
+       "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>LIE</th>\n",
+       "      <th>80</th>\n",
+       "      <td>LIE</td>\n",
        "      <td>9</td>\n",
        "      <td>2</td>\n",
        "      <td>F</td>\n",
        "      <td>5</td>\n",
+       "      <td>Liechtenstein</td>\n",
+       "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>MNE</th>\n",
+       "      <th>89</th>\n",
+       "      <td>MNE</td>\n",
        "      <td>14</td>\n",
        "      <td>1</td>\n",
        "      <td>F</td>\n",
        "      <td>14</td>\n",
+       "      <td>Montenegro</td>\n",
+       "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>MOZ</th>\n",
+       "      <th>91</th>\n",
+       "      <td>MOZ</td>\n",
        "      <td>2</td>\n",
        "      <td>1</td>\n",
        "      <td>F</td>\n",
        "      <td>2</td>\n",
+       "      <td>Mozambique</td>\n",
+       "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>PER</th>\n",
+       "      <th>103</th>\n",
+       "      <td>PER</td>\n",
        "      <td>15</td>\n",
        "      <td>2</td>\n",
        "      <td>F</td>\n",
        "      <td>12</td>\n",
+       "      <td>Peru</td>\n",
+       "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>PRK</th>\n",
+       "      <th>107</th>\n",
+       "      <td>PRK</td>\n",
        "      <td>67</td>\n",
        "      <td>2</td>\n",
        "      <td>F</td>\n",
        "      <td>34</td>\n",
+       "      <td>North Korea</td>\n",
+       "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>ROU</th>\n",
+       "      <th>110</th>\n",
+       "      <td>ROU</td>\n",
        "      <td>653</td>\n",
        "      <td>2</td>\n",
        "      <td>F</td>\n",
        "      <td>355</td>\n",
+       "      <td>Romania</td>\n",
+       "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>SGP</th>\n",
+       "      <th>115</th>\n",
+       "      <td>SGP</td>\n",
        "      <td>9</td>\n",
        "      <td>2</td>\n",
        "      <td>F</td>\n",
        "      <td>7</td>\n",
+       "      <td>Singapore</td>\n",
+       "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>UKR</th>\n",
+       "      <th>118</th>\n",
+       "      <td>SRI</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>F</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Sri Lanka</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>138</th>\n",
+       "      <td>UKR</td>\n",
        "      <td>199</td>\n",
        "      <td>2</td>\n",
        "      <td>F</td>\n",
        "      <td>105</td>\n",
+       "      <td>Ukraine</td>\n",
+       "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>ZIM</th>\n",
+       "      <th>148</th>\n",
+       "      <td>ZIM</td>\n",
        "      <td>22</td>\n",
        "      <td>1</td>\n",
        "      <td>F</td>\n",
        "      <td>22</td>\n",
+       "      <td>Zimbabwe</td>\n",
+       "      <td></td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "    count unique top freq\n",
-       "NOC                      \n",
-       "BLR   139      2   F   77\n",
-       "BRN     3      1   F    3\n",
-       "CHN   989      2   F  654\n",
-       "CRC     4      1   F    4\n",
-       "JAM   157      2   F   86\n",
-       "KOS     1      1   F    1\n",
-       "LIE     9      2   F    5\n",
-       "MNE    14      1   F   14\n",
-       "MOZ     2      1   F    2\n",
-       "PER    15      2   F   12\n",
-       "PRK    67      2   F   34\n",
-       "ROU   653      2   F  355\n",
-       "SGP     9      2   F    7\n",
-       "UKR   199      2   F  105\n",
-       "ZIM    22      1   F   22"
+       "     NOC  count  unique top  freq         region      notes\n",
+       "11   BDI      2       2   F     1        Burundi           \n",
+       "14   BLR    139       2   F    77        Belarus           \n",
+       "18   BRN      3       1   F     3        Bahrain           \n",
+       "22   CHN    989       2   F   654          China           \n",
+       "26   CRC      4       1   F     4     Costa Rica           \n",
+       "56   HKG      4       2   F     2          China  Hong Kong\n",
+       "68   JAM    157       2   F    86        Jamaica           \n",
+       "75   KOS      1       1   F     1         Kosovo           \n",
+       "80   LIE      9       2   F     5  Liechtenstein           \n",
+       "89   MNE     14       1   F    14     Montenegro           \n",
+       "91   MOZ      2       1   F     2     Mozambique           \n",
+       "103  PER     15       2   F    12           Peru           \n",
+       "107  PRK     67       2   F    34    North Korea           \n",
+       "110  ROU    653       2   F   355        Romania           \n",
+       "115  SGP      9       2   F     7      Singapore           \n",
+       "118  SRI      2       2   F     1      Sri Lanka           \n",
+       "138  UKR    199       2   F   105        Ukraine           \n",
+       "148  ZIM     22       1   F    22       Zimbabwe           "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "medalists = athletes[pd.notnull(athletes.Medal)].groupby('NOC').Sex.describe()\n",
-    "medalists.loc[medalists['top'] == 'F']"
+    "medalists_new = pd.merge(medalists, regions, on = 'NOC')\n",
+    "medalists_new.loc[medalists_new['top'] == 'F'].fillna('')"
    ]
   },
   {
@@ -642,7 +716,7 @@
    "source": [
     "Burundi, Belarus, Bahrain, China, Costa Rica, Hong Kong (China), Jamaica, Kosovo, Liechtenstein, Montenegro, Mozambique, Peru, North Korea, Romania, Singapore, Sri Lanka, Ukraine, and Zimbabwe all have more female medalists than male medalists.\n",
     "\n",
-    "I also included conties that only have female athletes; inherently any positive integer is greater than 0. Since some countries technically sent 0 male athletes, they would fulfill the conditionn laid out by the question."
+    "I also included counties that only have female athletes; inherently any positive integer is greater than 0. Since some countries technically sent 0 male athletes, they would fulfill the conditionn laid out by the question."
    ]
   },
   {
@@ -721,7 +795,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 46,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -736,33 +810,33 @@
        "1912    31.595092\n",
        "1924    11.144578\n",
        "1928     8.163265\n",
-       "1932     0.000000\n",
+       "1932    34.865900\n",
        "1936     0.000000\n",
        "1948     0.000000\n",
        "1952     4.273504\n",
        "1956     3.921569\n",
-       "1960     0.000000\n",
+       "1960    38.000000\n",
        "1964     9.068627\n",
        "1968     1.647059\n",
        "1972     0.210970\n",
        "1976     0.393701\n",
-       "1980     0.000000\n",
-       "1984     0.000000\n",
+       "1980    33.333333\n",
+       "1984    32.574431\n",
        "1988     4.612850\n",
        "1992     7.993967\n",
        "1994     7.272727\n",
-       "1996     0.000000\n",
+       "1996    26.151316\n",
        "1998     5.517241\n",
        "2000     9.049774\n",
-       "2002     0.000000\n",
+       "2002     6.790123\n",
        "2010    38.505747\n",
        "2012     0.000000\n",
        "2014    16.336634\n",
-       "2016     5.421687\n",
+       "2016     5.413534\n",
        "Name: Medal, dtype: float64"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -786,7 +860,11 @@
     "id": "R9dYAutxubGJ"
    },
    "source": [
-    "(Use this space to explain your answers)"
+    "The above table contains the percent of gold medals won by the host country for every year the Olympics occured. I first made a copy of athletes, to ensure the original dataframe isn't altered. Then, I merged the copy of athletes with regions on the NOC column, so that the region column is added. I only selected relevant columns from athletes_copy, to prevent table clutter.\n",
+    "\n",
+    "Next came another merge with the pulled Wikipedia table, on city and year. This merged table was filtered by gold medals. Two separate new dataframes were created, one counting the total number of gold medals earned each year, and the other counting the number of gold medals the host country won. The percentage was calculated by dividing the latter by the former, and filling in NAs with 0.\n",
+    "\n",
+    "There exists an issue here: if the noc_region.csv has a different NOC/region name than the athlete_events.csv/Wikipedia table, then the Python code would not match them. The only way is to correct this is to manually go through noc_region.csv and edit any region/NOC names that do not match. However, no dataset is always 100% clean, so even if it was manually altered, there may be some values that are missed."
    ]
   },
   {
@@ -798,20 +876,6 @@
    "source": [
     "## Please submit your completed notebook in .IPYNB and .HTML formats via Canvas"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
