Minor bug fixes

--- a/618_Homework_01.ipynb
+++ b/618_Homework_01.ipynb
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -398,7 +398,7 @@
        "max                                                "
       ]
      },
-     "execution_count": 64,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -425,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -476,9 +476,9 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>top</th>\n",
-       "      <td>ISV</td>\n",
+       "      <td>HKG</td>\n",
        "      <td>Germany</td>\n",
-       "      <td>Turks and Caicos Islands</td>\n",
+       "      <td>United Arab Republic</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>freq</th>\n",
@@ -491,14 +491,14 @@
        "</div>"
       ],
       "text/plain": [
-       "        NOC   region                     notes\n",
-       "count   230      227                        21\n",
-       "unique  230      206                        21\n",
-       "top     ISV  Germany  Turks and Caicos Islands\n",
-       "freq      1        4                         1"
+       "        NOC   region                 notes\n",
+       "count   230      227                    21\n",
+       "unique  230      206                    21\n",
+       "top     HKG  Germany  United Arab Republic\n",
+       "freq      1        4                     1"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -529,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 4,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -542,7 +542,7 @@
        "0.37906548521318045"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -574,7 +574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -591,7 +591,7 @@
        "Name: Name, dtype: object"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -602,7 +602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -615,7 +615,7 @@
        " 'Art Competitions Mixed Sculpturing, Medals']"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -627,7 +627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -636,7 +636,7 @@
        "[1912, 1928, 1932, 1936, 1948]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -647,7 +647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -656,7 +656,7 @@
        "['Canada']"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -695,7 +695,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 9,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -714,7 +714,7 @@
        "Name: Age, dtype: float64"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -745,7 +745,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -764,7 +764,7 @@
        "Name: Medal, dtype: int64"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -797,7 +797,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -835,6 +835,16 @@
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>BDI</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>F</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Burundi</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
        "    <tr>\n",
        "      <th>14</th>\n",
        "      <td>BLR</td>\n",
@@ -874,6 +884,16 @@
        "      <td>4</td>\n",
        "      <td>Costa Rica</td>\n",
        "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>56</th>\n",
+       "      <td>HKG</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2</td>\n",
+       "      <td>F</td>\n",
+       "      <td>2</td>\n",
+       "      <td>China</td>\n",
+       "      <td>Hong Kong</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>68</th>\n",
@@ -966,6 +986,16 @@
        "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <th>118</th>\n",
+       "      <td>SRI</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>F</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Sri Lanka</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>138</th>\n",
        "      <td>UKR</td>\n",
        "      <td>199</td>\n",
@@ -990,25 +1020,28 @@
        "</div>"
       ],
       "text/plain": [
-       "     NOC  count  unique top  freq         region notes\n",
-       "14   BLR    139       2   F    77        Belarus      \n",
-       "18   BRN      3       1   F     3        Bahrain      \n",
-       "22   CHN    989       2   F   654          China      \n",
-       "26   CRC      4       1   F     4     Costa Rica      \n",
-       "68   JAM    157       2   F    86        Jamaica      \n",
-       "75   KOS      1       1   F     1         Kosovo      \n",
-       "80   LIE      9       2   F     5  Liechtenstein      \n",
-       "89   MNE     14       1   F    14     Montenegro      \n",
-       "91   MOZ      2       1   F     2     Mozambique      \n",
-       "103  PER     15       2   F    12           Peru      \n",
-       "107  PRK     67       2   F    34    North Korea      \n",
-       "110  ROU    653       2   F   355        Romania      \n",
-       "115  SGP      9       2   F     7      Singapore      \n",
-       "138  UKR    199       2   F   105        Ukraine      \n",
-       "148  ZIM     22       1   F    22       Zimbabwe      "
+       "     NOC  count  unique top  freq         region      notes\n",
+       "11   BDI      2       2   F     1        Burundi           \n",
+       "14   BLR    139       2   F    77        Belarus           \n",
+       "18   BRN      3       1   F     3        Bahrain           \n",
+       "22   CHN    989       2   F   654          China           \n",
+       "26   CRC      4       1   F     4     Costa Rica           \n",
+       "56   HKG      4       2   F     2          China  Hong Kong\n",
+       "68   JAM    157       2   F    86        Jamaica           \n",
+       "75   KOS      1       1   F     1         Kosovo           \n",
+       "80   LIE      9       2   F     5  Liechtenstein           \n",
+       "89   MNE     14       1   F    14     Montenegro           \n",
+       "91   MOZ      2       1   F     2     Mozambique           \n",
+       "103  PER     15       2   F    12           Peru           \n",
+       "107  PRK     67       2   F    34    North Korea           \n",
+       "110  ROU    653       2   F   355        Romania           \n",
+       "115  SGP      9       2   F     7      Singapore           \n",
+       "118  SRI      2       2   F     1      Sri Lanka           \n",
+       "138  UKR    199       2   F   105        Ukraine           \n",
+       "148  ZIM     22       1   F    22       Zimbabwe           "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1044,7 +1077,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 12,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -1063,7 +1096,7 @@
        "Name: Medal_val, dtype: int64"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1107,7 +1140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 16,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -1130,7 +1163,7 @@
        "1936    27.298851\n",
        "1948     2.121212\n",
        "1952     4.273504\n",
-       "1956     3.921569\n",
+       "1956     8.797654\n",
        "1960    38.000000\n",
        "1964     9.068627\n",
        "1968     1.647059\n",
@@ -1154,7 +1187,7 @@
        "Name: Medal, dtype: float64"
       ]
      },
-     "execution_count": 144,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1172,9 +1205,10 @@
     "host_cities = pd.read_html(link)[1] # God bless pandas 0.24.0\n",
     "host_cities.City = host_cities.apply(clean_table, axis = 1)\n",
     "\n",
-    "# Need to manually adjust some of the country names\n",
+    "# Need to manually adjust some of the country/city names\n",
     "host_cities.Country = host_cities.Country.replace({'United Kingdom': 'England', 'Nazi Germany': 'Germany', 'Empire of Japan\\xa0Nazi Germany': 'Japan', 'Empire of Japan\\xa0Finland': 'Japan', \n",
     "                                   'Australia\\xa0Sweden': 'Australia', 'West Germany': 'Germany', 'Soviet Union': 'Russia', 'Great Britain': 'England'})\n",
+    "host_cities.City = host_cities.City.replace({'SapporoGarmisch-Partenkirchen': 'Sapporo', 'TokyoHelsinki': 'Tokoyo', 'MelbourneStockholm': 'Melbourne'})\n",
     "\n",
     "athletes_copy = athletes.copy()\n",
     "\n",
@@ -1215,6 +1249,13 @@
    "source": [
     "## Please submit your completed notebook in .IPYNB and .HTML formats via Canvas"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
