--- a/618_Homework_01.ipynb
+++ b/618_Homework_01.ipynb
@@ -476,7 +476,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>top</th>\n",
-       "      <td>HKG</td>\n",
+       "      <td>POR</td>\n",
        "      <td>Germany</td>\n",
        "      <td>United Arab Republic</td>\n",
        "    </tr>\n",
@@ -494,7 +494,7 @@
        "        NOC   region                 notes\n",
        "count   230      227                    21\n",
        "unique  230      206                    21\n",
-       "top     HKG  Germany  United Arab Republic\n",
+       "top     POR  Germany  United Arab Republic\n",
        "freq      1        4                     1"
       ]
      },
@@ -836,16 +836,6 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>BDI</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>F</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Burundi</td>\n",
-       "      <td></td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>14</th>\n",
        "      <td>BLR</td>\n",
        "      <td>139</td>\n",
@@ -884,16 +874,6 @@
        "      <td>4</td>\n",
        "      <td>Costa Rica</td>\n",
        "      <td></td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>56</th>\n",
-       "      <td>HKG</td>\n",
-       "      <td>4</td>\n",
-       "      <td>2</td>\n",
-       "      <td>F</td>\n",
-       "      <td>2</td>\n",
-       "      <td>China</td>\n",
-       "      <td>Hong Kong</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>68</th>\n",
@@ -986,16 +966,6 @@
        "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>118</th>\n",
-       "      <td>SRI</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>F</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Sri Lanka</td>\n",
-       "      <td></td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>138</th>\n",
        "      <td>UKR</td>\n",
        "      <td>199</td>\n",
@@ -1020,25 +990,22 @@
        "</div>"
       ],
       "text/plain": [
-       "     NOC  count  unique top  freq         region      notes\n",
-       "11   BDI      2       2   F     1        Burundi           \n",
-       "14   BLR    139       2   F    77        Belarus           \n",
-       "18   BRN      3       1   F     3        Bahrain           \n",
-       "22   CHN    989       2   F   654          China           \n",
-       "26   CRC      4       1   F     4     Costa Rica           \n",
-       "56   HKG      4       2   F     2          China  Hong Kong\n",
-       "68   JAM    157       2   F    86        Jamaica           \n",
-       "75   KOS      1       1   F     1         Kosovo           \n",
-       "80   LIE      9       2   F     5  Liechtenstein           \n",
-       "89   MNE     14       1   F    14     Montenegro           \n",
-       "91   MOZ      2       1   F     2     Mozambique           \n",
-       "103  PER     15       2   F    12           Peru           \n",
-       "107  PRK     67       2   F    34    North Korea           \n",
-       "110  ROU    653       2   F   355        Romania           \n",
-       "115  SGP      9       2   F     7      Singapore           \n",
-       "118  SRI      2       2   F     1      Sri Lanka           \n",
-       "138  UKR    199       2   F   105        Ukraine           \n",
-       "148  ZIM     22       1   F    22       Zimbabwe           "
+       "     NOC  count  unique top  freq         region notes\n",
+       "14   BLR    139       2   F    77        Belarus      \n",
+       "18   BRN      3       1   F     3        Bahrain      \n",
+       "22   CHN    989       2   F   654          China      \n",
+       "26   CRC      4       1   F     4     Costa Rica      \n",
+       "68   JAM    157       2   F    86        Jamaica      \n",
+       "75   KOS      1       1   F     1         Kosovo      \n",
+       "80   LIE      9       2   F     5  Liechtenstein      \n",
+       "89   MNE     14       1   F    14     Montenegro      \n",
+       "91   MOZ      2       1   F     2     Mozambique      \n",
+       "103  PER     15       2   F    12           Peru      \n",
+       "107  PRK     67       2   F    34    North Korea      \n",
+       "110  ROU    653       2   F   355        Romania      \n",
+       "115  SGP      9       2   F     7      Singapore      \n",
+       "138  UKR    199       2   F   105        Ukraine      \n",
+       "148  ZIM     22       1   F    22       Zimbabwe      "
       ]
      },
      "execution_count": 11,
@@ -1151,40 +1118,40 @@
      "data": {
       "text/plain": [
        "Year\n",
-       "1896    16.129032\n",
-       "1900    10.945274\n",
-       "1904    38.728324\n",
-       "1908    31.292517\n",
-       "1912    29.141104\n",
-       "1920    10.953347\n",
-       "1924    11.144578\n",
-       "1928     7.272727\n",
-       "1932    29.501916\n",
-       "1936    27.298851\n",
-       "1948     2.121212\n",
-       "1952     4.273504\n",
-       "1956     8.797654\n",
-       "1960    38.000000\n",
-       "1964     9.068627\n",
-       "1968     1.647059\n",
-       "1972     9.493671\n",
-       "1976     0.393701\n",
-       "1980    33.333333\n",
-       "1984    32.574431\n",
-       "1988     4.612850\n",
-       "1992     7.993967\n",
-       "1994     7.272727\n",
-       "1996    26.151316\n",
-       "1998     5.517241\n",
-       "2000     9.049774\n",
-       "2002     5.555556\n",
-       "2004     1.204819\n",
-       "2008    11.028316\n",
-       "2010    38.505747\n",
-       "2012     7.594937\n",
-       "2014    16.336634\n",
-       "2016     5.413534\n",
-       "Name: Medal, dtype: float64"
+       "1896     10\n",
+       "1900     22\n",
+       "1904     67\n",
+       "1908     92\n",
+       "1912     95\n",
+       "1920     54\n",
+       "1924     37\n",
+       "1928     20\n",
+       "1932     77\n",
+       "1936     95\n",
+       "1948      7\n",
+       "1952     15\n",
+       "1956     30\n",
+       "1960     19\n",
+       "1964     37\n",
+       "1968      7\n",
+       "1972     45\n",
+       "1976      2\n",
+       "1980     24\n",
+       "1984    186\n",
+       "1988     28\n",
+       "1992     53\n",
+       "1994      8\n",
+       "1996    159\n",
+       "1998      8\n",
+       "2000     60\n",
+       "2002      9\n",
+       "2004      8\n",
+       "2008     74\n",
+       "2010     67\n",
+       "2012     48\n",
+       "2014     33\n",
+       "2016     36\n",
+       "Name: Medal, dtype: int64"
       ]
      },
      "execution_count": 16,
@@ -1221,7 +1188,8 @@
     "ath_copy_wiki_filt = ath_copy_wiki[ath_copy_wiki.Medal == 'Gold']\n",
     "gold_totals = ath_copy_wiki_filt.groupby('Year').count().Medal\n",
     "gold_host = ath_copy_wiki_filt[ath_copy_wiki_filt.Team == ath_copy_wiki_filt.Country].groupby('Year').count().Medal\n",
-    "(gold_host / gold_totals).fillna(0)*100"
+    "(gold_host / gold_totals).fillna(0)*100\n",
+    "gold_host"
    ]
   },
   {
@@ -1249,13 +1217,6 @@
    "source": [
     "## Please submit your completed notebook in .IPYNB and .HTML formats via Canvas"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
