--- a/618_HW3.ipynb
+++ b/618_HW3.ipynb
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -424,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 3,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -440,16 +440,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x46dcda65c0>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x23542a276d8>"
       ]
      },
-     "execution_count": 117,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -474,6 +474,15 @@
     "sns.barplot(y = cwur_2013.institution, x = cwur_2013.score, orient = 'h', ax = axs[0,1])\n",
     "sns.barplot(y = cwur_2014.institution, x = cwur_2014.score, orient = 'h', ax = axs[1,0])\n",
     "sns.barplot(y = cwur_2015.institution, x = cwur_2015.score, orient = 'h', ax = axs[1,1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cwur_pivot = cwur[['institution','world_rank','year' ]].pivot(index='institution', columns='year',values='world_rank')"
    ]
   },
   {
