Commit prior to OS migration

--- a/618_HW3.ipynb
+++ b/618_HW3.ipynb
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 2,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -488,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -602,7 +602,7 @@
        "3                                4.0                   5.0  "
       ]
      },
-     "execution_count": 67,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -619,6 +619,19 @@
     "cwur_pivot_top10_t = cwur_pivot_top10.transpose()\n",
     "cwur_pivot_top10_t.reset_index(inplace = True)\n",
     "cwur_pivot_top10_t"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot = sns.lineplot(x = 'year', y = 'Columbia University', data = cwur_pivot_top10_t, label = 'Columbia University')\n",
+    "plot = sns.lineplot(x = 'year', y = 'Harvard University', data = cwur_pivot_top10_t, label = 'Harvard University')\n",
+    "plot = sns.lineplot(x = 'year', y = 'Massachusetts Institute of Technology', data = cwur_pivot_top10_t, label = 'MIT')\n",
+    "plot = sns.lineplot(x = 'year', y = 'Princeton University', data = cwur_pivot_top10_t, label = 'Princeton University')\n",
+    "plot = sns.lineplot(x = 'year', y = 'Columbia University', data = cwur_pivot_top10_t, label = 'Columbia University')"
    ]
   },
   {
