--- a/618_HW4.ipynb
+++ b/618_HW4.ipynb
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -95,6 +95,8 @@
     "import seaborn as sns\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
+    "import statsmodels.api as sm\n",
+    "import statsmodels.formula.api as smf\n",
     "\n",
     "df_ca = pd.read_csv('data/hw4_data/youtube/CAvideos.csv')\n",
     "df_de = pd.read_csv('data/hw4_data/youtube/DEvideos.csv')\n",
