--- a/618_Homework_01.ipynb
+++ b/618_Homework_01.ipynb
@@ -1140,7 +1140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -1149,45 +1149,208 @@
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Host Medal Proportion</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Year</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1896</th>\n",
+       "      <td>16.129032</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1900</th>\n",
+       "      <td>10.945274</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1904</th>\n",
+       "      <td>38.728324</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1908</th>\n",
+       "      <td>31.292517</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1912</th>\n",
+       "      <td>29.141104</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1920</th>\n",
+       "      <td>10.953347</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1924</th>\n",
+       "      <td>11.144578</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1928</th>\n",
+       "      <td>7.272727</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1932</th>\n",
+       "      <td>29.501916</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1936</th>\n",
+       "      <td>27.298851</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1948</th>\n",
+       "      <td>2.121212</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1952</th>\n",
+       "      <td>4.273504</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1956</th>\n",
+       "      <td>8.797654</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1960</th>\n",
+       "      <td>38.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1964</th>\n",
+       "      <td>9.068627</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1968</th>\n",
+       "      <td>1.647059</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1972</th>\n",
+       "      <td>9.493671</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1976</th>\n",
+       "      <td>0.393701</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1980</th>\n",
+       "      <td>33.333333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1984</th>\n",
+       "      <td>32.574431</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1988</th>\n",
+       "      <td>4.612850</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1992</th>\n",
+       "      <td>7.993967</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1994</th>\n",
+       "      <td>7.272727</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1996</th>\n",
+       "      <td>26.151316</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1998</th>\n",
+       "      <td>5.517241</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2000</th>\n",
+       "      <td>9.049774</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2002</th>\n",
+       "      <td>5.555556</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2004</th>\n",
+       "      <td>1.204819</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2008</th>\n",
+       "      <td>11.028316</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2010</th>\n",
+       "      <td>38.505747</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2012</th>\n",
+       "      <td>7.594937</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2014</th>\n",
+       "      <td>16.336634</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2016</th>\n",
+       "      <td>5.413534</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "Year\n",
-       "1896    16.129032\n",
-       "1900    10.945274\n",
-       "1904    38.728324\n",
-       "1908    31.292517\n",
-       "1912    29.141104\n",
-       "1920    10.953347\n",
-       "1924    11.144578\n",
-       "1928     7.272727\n",
-       "1932    29.501916\n",
-       "1936    27.298851\n",
-       "1948     2.121212\n",
-       "1952     4.273504\n",
-       "1956     8.797654\n",
-       "1960    38.000000\n",
-       "1964     9.068627\n",
-       "1968     1.647059\n",
-       "1972     9.493671\n",
-       "1976     0.393701\n",
-       "1980    33.333333\n",
-       "1984    32.574431\n",
-       "1988     4.612850\n",
-       "1992     7.993967\n",
-       "1994     7.272727\n",
-       "1996    26.151316\n",
-       "1998     5.517241\n",
-       "2000     9.049774\n",
-       "2002     5.555556\n",
-       "2004     1.204819\n",
-       "2008    11.028316\n",
-       "2010    38.505747\n",
-       "2012     7.594937\n",
-       "2014    16.336634\n",
-       "2016     5.413534\n",
-       "Name: Medal, dtype: float64"
+       "      Host Medal Proportion\n",
+       "Year                       \n",
+       "1896              16.129032\n",
+       "1900              10.945274\n",
+       "1904              38.728324\n",
+       "1908              31.292517\n",
+       "1912              29.141104\n",
+       "1920              10.953347\n",
+       "1924              11.144578\n",
+       "1928               7.272727\n",
+       "1932              29.501916\n",
+       "1936              27.298851\n",
+       "1948               2.121212\n",
+       "1952               4.273504\n",
+       "1956               8.797654\n",
+       "1960              38.000000\n",
+       "1964               9.068627\n",
+       "1968               1.647059\n",
+       "1972               9.493671\n",
+       "1976               0.393701\n",
+       "1980              33.333333\n",
+       "1984              32.574431\n",
+       "1988               4.612850\n",
+       "1992               7.993967\n",
+       "1994               7.272727\n",
+       "1996              26.151316\n",
+       "1998               5.517241\n",
+       "2000               9.049774\n",
+       "2002               5.555556\n",
+       "2004               1.204819\n",
+       "2008              11.028316\n",
+       "2010              38.505747\n",
+       "2012               7.594937\n",
+       "2014              16.336634\n",
+       "2016               5.413534"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1221,7 +1384,9 @@
     "ath_copy_wiki_filt = ath_copy_wiki[ath_copy_wiki.Medal == 'Gold']\n",
     "gold_totals = ath_copy_wiki_filt.groupby('Year').count().Medal\n",
     "gold_host = ath_copy_wiki_filt[ath_copy_wiki_filt.Team == ath_copy_wiki_filt.Country].groupby('Year').count().Medal\n",
-    "(gold_host / gold_totals).fillna(0)*100"
+    "table = (gold_host / gold_totals).fillna(0)*100\n",
+    "formatted_table = table.to_frame()\n",
+    "formatted_table.rename(index = str, columns = {'Medal': 'Host Medal Proportion'})"
    ]
   },
   {
