--- a/618_HW5.ipynb
+++ b/618_HW5.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -33,7 +33,7 @@
    },
    "outputs": [],
    "source": [
-    "MY_UNIQNAME = '?'"
+    "MY_UNIQNAME = 'tengdann'"
    ]
   },
   {
