--- a/618_HW5.ipynb
+++ b/618_HW5.ipynb
@@ -74,14 +74,388 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 105,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "XKbrcXjpPmp8"
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "import re\n",
+    "import os\n",
+    "import spacy\n",
+    "from spacy.lang.en.stop_words import STOP_WORDS\n",
+    "import pandas as pd\n",
+    "\n",
+    "get_ipython().config.get('IPKernelApp', {})['parent_appname'] = \"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>file</th>\n",
+       "      <th>content</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>00017.txt</td>\n",
+       "      <td>THE BOOK OF MORMON\\n\\nAn Account Written\\n\\nBY...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>00048.txt</td>\n",
+       "      <td>THE WORLD FACTBOOK 1992\\n\\n\\n:Afghanistan Geog...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>00056.txt</td>\n",
+       "      <td>When Senator Al Gore was evangelizing support ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>00064.txt</td>\n",
+       "      <td>[Frontispiece: The cold hollow eye of a revolv...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>00089.txt</td>\n",
+       "      <td>1.   Except as provided in this Annex, each Pa...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        file                                            content\n",
+       "0  00017.txt  THE BOOK OF MORMON\\n\\nAn Account Written\\n\\nBY...\n",
+       "1  00048.txt  THE WORLD FACTBOOK 1992\\n\\n\\n:Afghanistan Geog...\n",
+       "2  00056.txt  When Senator Al Gore was evangelizing support ...\n",
+       "3  00064.txt  [Frontispiece: The cold hollow eye of a revolv...\n",
+       "4  00089.txt  1.   Except as provided in this Annex, each Pa..."
+      ]
+     },
+     "execution_count": 92,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "folders = list(range(0, 2))\n",
+    "for i, folder in enumerate(folders):\n",
+    "    if len(str(folder)) == 1:\n",
+    "        folders[i] = '00' + str(folder)\n",
+    "    elif len(str(folder)) == 2:\n",
+    "        folders[i] = '0' + str(folder)\n",
+    "    else:\n",
+    "        folders[i] = str(folder)\n",
+    "\n",
+    "_list = list()\n",
+    "for folder in folders:\n",
+    "    subfolder = './data/hw5_data/gutenberg-dammit-files/%s' % folder\n",
+    "    for file in os.listdir(subfolder):\n",
+    "        if re.search('\\d+', file):\n",
+    "            filepath = os.path.join(subfolder, file)\n",
+    "            content = open(filepath, 'r', encoding = 'utf-8').read()\n",
+    "            df = pd.DataFrame(data = {'file': [file], 'content': [content]})\n",
+    "            _list.append(df)\n",
+    "            \n",
+    "raw_data = pd.concat(_list)\n",
+    "raw_data.reset_index(drop = True, inplace = True)\n",
+    "raw_data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>file</th>\n",
+       "      <th>content</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>00017.txt</td>\n",
+       "      <td>the book of mormon\\n\\nan account written\\n\\nby...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>00048.txt</td>\n",
+       "      <td>the world factbook 1992\\n\\n\\n:afghanistan geog...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>00056.txt</td>\n",
+       "      <td>when senator al gore was evangelizing support ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>00064.txt</td>\n",
+       "      <td>[frontispiece: the cold hollow eye of a revolv...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>00089.txt</td>\n",
+       "      <td>1.   except as provided in this annex, each pa...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        file                                            content\n",
+       "0  00017.txt  the book of mormon\\n\\nan account written\\n\\nby...\n",
+       "1  00048.txt  the world factbook 1992\\n\\n\\n:afghanistan geog...\n",
+       "2  00056.txt  when senator al gore was evangelizing support ...\n",
+       "3  00064.txt  [frontispiece: the cold hollow eye of a revolv...\n",
+       "4  00089.txt  1.   except as provided in this annex, each pa..."
+      ]
+     },
+     "execution_count": 93,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lower_data = raw_data.copy()\n",
+    "lower_data.content = lower_data.content.str.lower()\n",
+    "lower_data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>file</th>\n",
+       "      <th>content</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>00017.txt</td>\n",
+       "      <td>book  mormon\\n\\n account written\\n\\n  hand  m...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>00048.txt</td>\n",
+       "      <td>world factbook 1992\\n\\n\\n:afghanistan geograp...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>00056.txt</td>\n",
+       "      <td>senator al gore  evangelizing support   visio...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>00064.txt</td>\n",
+       "      <td>[frontispiece:  cold hollow eye   revolver sou...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>00089.txt</td>\n",
+       "      <td>1.     provided   annex,  party shall apply\\n ...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        file                                            content\n",
+       "0  00017.txt   book  mormon\\n\\n account written\\n\\n  hand  m...\n",
+       "1  00048.txt   world factbook 1992\\n\\n\\n:afghanistan geograp...\n",
+       "2  00056.txt   senator al gore  evangelizing support   visio...\n",
+       "3  00064.txt  [frontispiece:  cold hollow eye   revolver sou...\n",
+       "4  00089.txt  1.     provided   annex,  party shall apply\\n ..."
+      ]
+     },
+     "execution_count": 106,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nlp = spacy.load(r'C:\\Users\\dteng\\Anaconda\\Lib\\site-packages\\en_core_web_sm\\en_core_web_sm-2.0.0')\n",
+    "lower_nostop_data = lower_data.copy()\n",
+    "pat = r'\\b(?:{})\\b'.format('|'.join(list(STOP_WORDS)))\n",
+    "lower_nostop_data.content = lower_nostop_data.content.str.replace(pat, '')\n",
+    "lower_nostop_data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>file</th>\n",
+       "      <th>content</th>\n",
+       "      <th>paragraphs</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>00017.txt</td>\n",
+       "      <td>book  mormon\\n\\n account written\\n\\n  hand  m...</td>\n",
+       "      <td>[ book  mormon,  account written,   hand  morm...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>00048.txt</td>\n",
+       "      <td>world factbook \\n\\n\\nafghanistan geography\\n\\...</td>\n",
+       "      <td>[ world factbook , afghanistan geography, tota...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>00056.txt</td>\n",
+       "      <td>senator al gore  evangelizing support   visio...</td>\n",
+       "      <td>[ senator al gore  evangelizing support   visi...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>00064.txt</td>\n",
+       "      <td>frontispiece  cold hollow eye   revolver sough...</td>\n",
+       "      <td>[frontispiece  cold hollow eye   revolver soug...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>00089.txt</td>\n",
+       "      <td>provided   annex  party shall apply\\n agr...</td>\n",
+       "      <td>[     provided   annex  party shall apply,  ag...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        file                                            content  \\\n",
+       "0  00017.txt   book  mormon\\n\\n account written\\n\\n  hand  m...   \n",
+       "1  00048.txt   world factbook \\n\\n\\nafghanistan geography\\n\\...   \n",
+       "2  00056.txt   senator al gore  evangelizing support   visio...   \n",
+       "3  00064.txt  frontispiece  cold hollow eye   revolver sough...   \n",
+       "4  00089.txt       provided   annex  party shall apply\\n agr...   \n",
+       "\n",
+       "                                          paragraphs  \n",
+       "0  [ book  mormon,  account written,   hand  morm...  \n",
+       "1  [ world factbook , afghanistan geography, tota...  \n",
+       "2  [ senator al gore  evangelizing support   visi...  \n",
+       "3  [frontispiece  cold hollow eye   revolver soug...  \n",
+       "4  [     provided   annex  party shall apply,  ag...  "
+      ]
+     },
+     "execution_count": 121,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lower_nostop_alpha_data = lower_nostop_data.copy()\n",
+    "pat = r'[\\d!?.,\\[\\]/@#$%^&*():;]'\n",
+    "lower_nostop_alpha_data.content = lower_nostop_alpha_data.content.str.replace(pat, '')\n",
+    "lower_nostop_alpha_data['paragraphs'] = lower_nostop_alpha_data.content.str.split('\\n')\n",
+    "\n",
+    "def remove_blanks(row):\n",
+    "    cleaned = []\n",
+    "    for item in row['paragraphs']:\n",
+    "        if item != '':\n",
+    "            cleaned.append(item)\n",
+    "            \n",
+    "    return cleaned\n",
+    "\n",
+    "lower_nostop_alpha_data.paragraphs = lower_nostop_alpha_data.apply(remove_blanks, axis = 1)\n",
+    "lower_nostop_alpha_data.head()"
+   ]
   },
   {
    "cell_type": "markdown",
