--- a/618_07_NLP.ipynb
+++ b/618_07_NLP.ipynb
@@ -2618,7 +2618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -2638,8 +2638,8 @@
       "    virtualenv. You can still import the model as a module and call its\n",
       "    load() method, or create the symlink manually.\n",
       "\n",
-      "    C:\\Users\\dteng\\Anaconda\\lib\\site-packages\\en_core_web_sm -->\n",
-      "    C:\\Users\\dteng\\Anaconda\\lib\\site-packages\\spacy\\data\\en\n",
+      "    C:\\Users\\mrasianman3\\Anaconda3\\lib\\site-packages\\en_core_web_sm -->\n",
+      "    C:\\Users\\mrasianman3\\Anaconda3\\lib\\site-packages\\spacy\\data\\en\n",
       "\n",
       "\n",
       "    Creating a shortcut link for 'en' didn't work (maybe you don't have\n",
@@ -2653,7 +2653,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "You are using pip version 19.0.1, however version 19.0.3 is available.\n",
+      "You are using pip version 19.0.2, however version 19.0.3 is available.\n",
       "You should consider upgrading via the 'python -m pip install --upgrade pip' command.\n"
      ]
     }
