--- a/618_HW5.ipynb
+++ b/618_HW5.ipynb
@@ -74,13 +74,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "XKbrcXjpPmp8"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\dteng\\Anaconda\\lib\\site-packages\\gensim\\utils.py:1197: UserWarning: detected Windows; aliasing chunkize to chunkize_serial\n",
+      "  warnings.warn(\"detected Windows; aliasing chunkize to chunkize_serial\")\n"
+     ]
+    },
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'wordcloud'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-1-20cc02b17f62>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mspacy\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mlang\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0men\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mstop_words\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mSTOP_WORDS\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      7\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mPIL\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mImage\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 8\u001b[1;33m \u001b[1;32mfrom\u001b[0m \u001b[0mwordcloud\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mWordCloud\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mSTOPWORDS\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mImageColorGenerator\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      9\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mpandas\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mpd\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     10\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mnumpy\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'wordcloud'"
+     ]
+    }
+   ],
    "source": [
     "import re\n",
     "import os\n",
@@ -463,6 +483,8 @@
     "    return cleaned\n",
     "\n",
     "lower_nostop_alpha_data.paragraphs = lower_nostop_alpha_data.apply(remove_blanks, axis = 1)\n",
+    "lower_nostop_alpha_data['content_clean'] = lower_nostop_alpha_data.content.str.replace('\\n\\n', ' ')\n",
+    "lower_nostop_alpha_data.content_clean = lower_nostop_alpha_data.content_clean.str.replace('\\n', ' ')\n",
     "lower_nostop_alpha_data.head()"
    ]
   },
@@ -493,11 +515,19 @@
    "source": [
     "tokens = list()\n",
     "for i in range(0,5):\n",
-    "    test_list = raw_data.iloc[i].content.split('.')[:100] # Should extract the first 100 'sentences'\n",
-    "    sep = ' '\n",
-    "    test_book = sep.join(test_list)\n",
-    "\n",
-    "    doc = nlp(test_book)\n",
+    "    if len(lower_nostop_alpha_data.iloc[i].content_clean) < 1000000:\n",
+    "        doc = nlp(lower_nostop_alpha_data.iloc[i].content_clean[:999999])\n",
+    "    else:\n",
+    "        doc = nlp(lower_nosotp_alpha_data.iloc[i].content_clean)\n",
+    "    \n",
+    "    sents = list()\n",
+    "    for i, sent in enumerate(doc.sents):\n",
+    "        if i < 100:\n",
+    "            sents.append(sent)\n",
+    "        else:\n",
+    "            break\n",
+    "    \n",
+    "    doc = nlp(sents.join(' '))\n",
     "    for token in doc:\n",
     "        tokens.append(token.pos_)"
    ]
@@ -521,7 +551,7 @@
     }
    ],
    "source": [
-    "plt.figure(figsize=(45,10))\n",
+    "plt.figure(figsize=(45,3))\n",
     "sns.countplot(tokens, order=pd.Series(tokens).value_counts().index)\n",
     "# sns.countplot(words_nostop, order=[counted[0] for counted in Counter(words_nostop).most_common()])\n",
     "plt.xticks(rotation=90)\n",
@@ -1021,7 +1051,9 @@
     "id": "p-1tqXGVh4q2"
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "common = model.wv.most_similar('information', n = 100)"
+   ]
   }
  ],
  "metadata": {
